[tool.poetry]
name = "celes"
version = "0.1.0"
description = ""
authors = ["Anthony Diaz <anthony.gdmou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pyjwt = "^2.8.0"
python-dotenv = "^0.21.1"
pydantic-settings = "^2.3.3"
dask = "^2024.5.2"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
dask-expr = "^1.1.2"
python-multipart = "^0.0.9"
requests = "^2.32.3"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

